--- a/profapp/templates/company/company_employees.html
+++ b/profapp/templates/company/company_employees.html
@@ -12,26 +12,25 @@
     {% endblock company_base %}
 
     <script>
-        module.controller('employment_action_dialog', function ($scope, $ok, $uibModalInstance, action, user, company) {
+        module.controller('employment_action_dialog', function ($scope, $ok, $uibModalInstance, action, employment, company) {
 
             $scope.$$translate = {{ translates('employment_action_dialog')|safe }};
             $scope.employment_action = {{ raw_url_for('company.employment_action')|safe }};
             {% raw %}
 
             $scope.action = action;
-            $scope.user = user;
+            $scope.employment = employment;
             $scope.company = company;
 
             $scope.do_action = function () {
                 $ok($scope.employment_action({
-                    employment_id: $scope.user.id,
+                    employment_id: $scope.employment.id,
                     company_id: $scope.company.id,
                     action: $scope.action
                 }), {}, $uibModalInstance.close);
             }
 
             $scope.action_cancel = $uibModalInstance.dismiss;
-
 
             {% endraw %}
 
@@ -67,18 +66,17 @@
     </script>
     {% endraw %}
     <script>
-        module.controller('employment_position_dialog', function ($scope, $ok, $uibModalInstance, position, user, company) {
+        module.controller('employment_position_dialog', function ($scope, $ok, $uibModalInstance, employment, company) {
 
             $scope.$$translate = {{ translates('employment_position_dialog')|safe }};
             $scope.url_employment_change_position = {{ raw_url_for('company.employment_change_position')|safe }};
             {% raw %}
-            $scope.user = user;
+            $scope.position = employment.position;
             $scope.company = company;
-            $scope.position = position;
 
             $scope.set_position = function () {
                 $ok($scope.url_employment_change_position({
-                    employment_id: $scope.user.id,
+                    employment_id: employment.id,
                     company_id: $scope.company.id,
                 }), {position: $scope.position}, $uibModalInstance.close);
             }
@@ -112,20 +110,21 @@
 
 
     <script>
-        module.controller('company_employees_controller', function ($scope, $ok, $timeout, $uibModal) {
+        module.controller('company_employees_controller', function ($scope, $ok, $timeout, $uibModal, $rights) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_employees');
 
             $scope.$$translate = {{ translates('company_employees_controller')|safe }};
             $scope.company = {{ company.get_client_side_dict(fields = 'id,name')|tojson|safe }};
-            $scope.url_employee_update = {{ raw_url_for('company.employee_update')|safe }};
             $scope.get_link_user_profile = {{ raw_url_for('user.profile')|safe }};
+            $scope.url_set_rights = {{ raw_url_for('company.set_rights')|safe }};
+            $scope.rights = {{ employment.rights|tojson|safe }};
             {% raw %}
 
             $scope.loadData = function (data, callbackfunc) {
                 $scope.loading = true;
                 $ok('', data, function (resp) {
                     callbackfunc(resp);
-                }).finally(function(){
+                }).finally(function () {
                     $scope.loading = false
                 });
             };
@@ -137,46 +136,47 @@
 
             $scope.grid_action = function (id, action, row, column_name) {
                 'use strict'
-                if (action === 'ALLOW') {
-                    window.location.href = $scope.url_employee_update({
-                        'company_id': row.company_id, 'user_id': row.user_id
-                    });
-                    return;
-                }
-
-                else {
-                    var modalInstance = $uibModal.open({
-                        templateUrl: 'employment_action_dialog.html',
-                        controller: 'employment_action_dialog',
-                        resolve: resolveDictForAngularController({
-                            action: action,
-                            company: $scope.company,
-                            user: row
-                        })
-                    });
-
-                    modalInstance.result.then($scope.grid_update_row);
-                }
+                $uibModal.open({
+                    templateUrl: 'employment_action_dialog.html',
+                    controller: 'employment_action_dialog',
+                    resolve: resolveDictForAngularController({
+                        action: action,
+                        company: $scope.company,
+                        employment: row.employment
+                    })
+                }).result.then($scope.grid_update_row);
             };
 
             $scope.change_position = function (id, row, column_name) {
                 'use strict'
-
-                if(row.actions['ALLOW'] === true){
-                    var modalInstance = $uibModal.open({
+                if ($scope.rights['EMPLOYEE_ALLOW_RIGHTS']) {
+                    $uibModal.open({
                         templateUrl: 'employment_position_dialog.html',
                         controller: 'employment_position_dialog',
                         resolve: resolveDictForAngularController({
-                            position: row['position'],
+                            position: row['employment']['position'],
                             company: $scope.company,
-                            user: row
+                            employment: row.employment
                         })
-                    });
-
-                    modalInstance.result.then($scope.grid_update_row);
+                    }).result.then($scope.grid_update_row);
                 }
+            };
 
 
+            $scope.grid_rights = function (id, right_name, row, column_name) {
+                'use strict'
+                if ($scope.rights['EMPLOYEE_ALLOW_RIGHTS']) {
+                    $rights({
+                        'rights': row['employment']['rights'],
+                        'set_url': $scope.url_set_rights({'employment_id': row['employment']['id']}),
+                        'subject_type': 'user',
+                        'subject_name': row['employment']['user']['full_name'],
+                        'object_type': 'company',
+                        'object_name': '{% endraw %}{{ company.name }}{% raw %}'
+                    }).result.then(function (updated_row) {
+                        $scope.gridApi.grid.grid_change_row(updated_row);
+                    });
+                }
             };
 
 
@@ -185,41 +185,43 @@
 
                 columnDefs: [
                     {
-                        name: 'full_name', width: '20%', type: 'link',
-                        href:'get_link_user_profile({user_id : row.entity.user_id})',
-                        afilter: {type: 'input'}
+                        name: 'employment.user.full_name', width: '20%', type: 'link',
+                        href: 'get_link_user_profile({user_id : row.entity.employment.user_id})',
+                        afilter: {type: 'input'},
+                        width: '200'
                     },
-
                     {
-                        name: 'position',
+                        name: 'employment.position',
                         onclick: 'change_position',
-                        width: '10%', afilter: {type: 'input'}
+                        width: '100', afilter: {type: 'input'}
                     }
                     ,
-                    {name: 'status', width: '7%', afilter: {type: 'input'}},
+                        {
+                        name: 'employment.user.address_email',
+                        width: '150', afilter: {type: 'input'}
+                    },
                     {
-                        name: 'rights',
-                        width: '20%',
+                        name: 'employment.user.address_phone',
+                        width: '100', afilter: {type: 'input'}
+                    },
+                    {
+                        name: 'employment.status', width: '100', afilter: {type: 'input'}},
+                    {
+                        name: 'employment.rights',
+                        width: '300',
                         type: 'icons',
+                        onclick: 'grid_rights',
                         afilter: {type: 'input'},
                         classes: function (id, entity, field) {
-                            return entity.status !== 'ACTIVE' ? 'non-active' : '';
+                            return entity.employment.status !== 'ACTIVE' ? 'non-active' : '';
                         }
                     },
                     {
-                       name: 'address_email',
-                       width: '10%', afilter: {type: 'input'}
-                    },
-                    {
-                       name: 'address_phone',
-                       width: '10%', afilter: {type: 'input'}
-                    },
-                    {
-                        name: 'actions', width: '26%', type: 'actions',
+                        name: 'actions', width: '200', type: 'actions',
                         onclick: 'grid_action',
                         afilter: {type: 'input'}, classes: function (id,
                                                                      entity, field) {
-                        return entity.status !== 'ACTIVE' ? 'non-active' : '';
+                        return entity.employment.status !== 'ACTIVE' ? 'non-active' : '';
                     }
                     }
                 ]
@@ -233,7 +235,8 @@
         <h2>{{ _('Employees at company `%(company.name)s`') }}</h2>
         <div class="grid" id="grid1" ui-grid-edit ui-grid="gridOptions1">
             <div class="well grid-loading" ng-show="loading">
-              <i class="fa fa-spinner fa-spin"></i><div>{{ _('Data Loading...') }}</div>
+                <i class="fa fa-spinner fa-spin"></i>
+                <div>{{ _('Data Loading...') }}</div>
             </div>
         </div>
         {% endraw %}
