--- a/profapp/templates/company/company_base_angular.html
+++ b/profapp/templates/company/company_base_angular.html
@@ -4,7 +4,7 @@
 
         $scope.user = {{ g.user.get_client_side_dict()|tojson|safe }};
         $scope.company = {{ (company.get_client_side_dict() if company else portal.own_company.get_client_side_dict())|tojson|safe }};
-        $scope.user_active = {{ user_company_active|safe}}
+        $scope.user_is_employee = {{ user_is_employee|safe}}
         $scope.$$translate = {{ translates('CompanyMenuController')|safe }};
 
         $scope.url_company_profile = {{ raw_url_for('company.profile')|safe }};
@@ -33,7 +33,7 @@
 </script>
 {% raw %}
 <div ng-controller="CompanyMenuController" class="topbar-menu-links" ng-cloak>
-    <div ng-if="user.id && company.id && user_active" ng-cloak>
+    <div ng-if="user.id && company.id && user_is_employee" ng-cloak>
         <div class="container menu-company">
             <div class="row">
                 <div class="col-lg-12 col-md-6 col-sm-4 col-xs-4 pl0 pr0">
