--- a/profapp/templates/company/material_details.html
+++ b/profapp/templates/company/material_details.html
@@ -20,7 +20,7 @@
             $scope.$$translate = {{ translates('material_details')|safe }};
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('materials');
 
-            $scope.url_search_for_user = {{ raw_url_for('company.search_for_user')|safe }};
+{#            $scope.url_search_for_user = {{ raw_url_for('company.search_for_user')|safe }};#}
             $scope.url_update_material = {{ raw_url_for('article.article_show_form')|safe }};
             $scope.url_company = {{ raw_url_for('company.profile')|safe }};
             $scope.url_front_publication_details = {{ raw_url_for('front.article_details')|safe }};
