--- a/profapp/templates/company/materials.html
+++ b/profapp/templates/company/materials.html
@@ -59,12 +59,12 @@
                 }],
                 columnDefs: [
                     {
-                        name: 'title', category:"searching",  width: '30%',
+                        name: 'title', acategory:"searching",  width: '30%',
                         type: 'link', cellStyle:"getBackground(row)",
                         img_url: 'illustration.url',
                         href: "url_material_details({company_id:grid.appScope.company.id,material_id:row.entity.id})"
                     },{
-                        name: 'editor.full_name', category:"searching"
+                        name: 'editor.full_name', acategory:"searching"
                     },{
                         name: 'md_tm',enableCellEdit: true,
                         afilter: {type: 'date_range'}
