--- a/profapp/templates/portal/companies_members.html
+++ b/profapp/templates/portal/companies_members.html
@@ -16,7 +16,7 @@
 
     <script>
 
-        module.controller('company_partners', function ($scope, $ok, $membership_plan, $rights) {
+        module.controller('company_partners', function ($scope, $ok, $membership_plan, $rights, $selectStatus, $timeout) {
 
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_members');
             $scope.$$translate = {{translates('company_partners') | safe}};
@@ -35,18 +35,20 @@
                 }
             };
 
-            $scope.grid_update_row = function (updated_row) {
-//                    TODO: SS by OZ: how i can access grid data without data cariable in my scope?
-                $scope.gridApi.grid.grid_change_row(updated_row);
+            $scope.set_new_status = function (id, row, column_name) {
+                $selectStatus({
+                    title: $scope._('change status of membership by portal dialog title', null, 'change status of membership'),
+                    question: $scope._('You are going to change status of membership for company `%(company.name)s` at portal `%(portal.name)s`', row['membership']),
+                    old_status: row.membership.status,
+                    status_changes: row.status_changes
+                }, $scope).then(function (new_status) {
+                    $ok($scope.url_change_status({
+                        membership_id: row['membership'].id,
+                        new_status: new_status
+                    }), {}, $scope.gridApi.grid.grid_change_row);
+                });
             };
 
-            $scope.grid_action = function (id, action, row, column_name) {
-                return $ok($scope.url_change_status({membership_id: row.id}),
-                        {action: action}, function (resp) {
-                            $scope.gridApi.grid.grid_change_row(resp);
-                        }).finally(function () {
-                })
-            };
 
             $scope.grid_rights = function (id, right_name, row, column_name) {
                 $rights({
@@ -72,6 +74,8 @@
 
             $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
                 urlLoadGridData: $scope.url_load,
+                rowTemplate: '<div ng-class="{\'disabled\': row.entity[\'disabled\'] }"><div ng-repeat="(colRenderIndex, col) in colContainer.renderedColumns track by col.colDef.name" class="ui-grid-cell" ng-class="{ \'ui-grid-row-header-cell\': col.isRowHeader }" ui-grid-cell></div></div>',
+                disableByField: 'disabled',
                 columnDefs: [
                     {
                         name: 'membership.company.name',
@@ -87,17 +91,16 @@
                                     (row['membership']['requested_membership_plan_issued'] ? ('/<em>' + row['membership']['requested_membership_plan_issued']['name'] + '</em>') : '');
                         }
                     },
-                    {name: 'membership.status', afilter: {type: 'multi_select', default_selected: true}},
+
                     publication_column(),
                     {
                         name: 'membership.rights', width: '50', type: 'icons', afilter: {type: 'input'},
                         onclick: 'grid_rights'
                     },
                     {
-                        name: 'actions', width: '*', type: 'actions', onclick: 'grid_action', classes: function (id,
-                                                                                                                 entity, field) {
-                        return entity.status !== 'ACTIVE' ? 'non-active' : '';
-                    }
+                        width: '300',
+                        name: 'membership.status',
+                        onclick: 'set_new_status'
                     }
                 ]
             });
