--- a/profapp/templates/templates-angular.html
+++ b/profapp/templates/templates-angular.html
@@ -394,7 +394,7 @@
     </div>
 </script>
 
-<script type="text/ng-template" id="confirm.html">
+<script type="text/ng-template" id="confirm_dialog.html">
     <div class="modal-header">
         <h3 class="modal-title">{{ title }}</h3>
     </div>
@@ -404,6 +404,27 @@
 
     <div class="modal-footer">
         <button ng-repeat="b in buttons" class="btn {{b.class_name}}" ng-click="ans(b.answer)">{{ b.text }}</button>
+    </div>
+</script>
+
+<script type="text/ng-template" id="select_status_dialog.html">
+    <div class="modal-header">
+        <h3 class="modal-title">{{ ::title }}</h3>
+    </div>
+    <div class="modal-body">
+        {{ ::question }}
+        <div ng-repeat="status_enabled_message in status_changes">
+            <label title="{{ status_enabled_message['message'] }}"
+                ng-class="{'disabled': !status_enabled_message['enabled'], 'bold': $parent.new_status === status_enabled_message['status']}">
+            <input type="radio"
+                ng-disabled="!status_enabled_message['enabled']"
+                ng-model="$parent.new_status" ng-value="status_enabled_message['status']"/>&nbsp;
+            {{ ::$parent.$parent._('change status from ' + old_status + ' to ' + status_enabled_message['status']) }}</label></div>
+    </div>
+
+    <div class="modal-footer">
+        <button class="btn btn-success" ng-disabled="!new_status || new_status === old_status" ng-click="ok()">{{ ::_('Ok') }}</button>
+        <button class="btn btn-danger" ng-click="cancel()">{{ ::_('Cancel') }}</button>
     </div>
 </script>
 
